Uses proper automated Docker labels; ln instead of mv for spigot.jar